# dev_essential

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  a_util.md  ddl.md  ddl_capi.md  rpc.md  sca_presets.cmake  used_licenses.txt
doc/: CMakeLists.txt
include/ddl/: ddl.h  (+1 more)
src/: CMakeLists.txt  dev_essential-config.cmake.in
src/base/: CMakeLists.txt
src/concurrency/: CMakeLists.txt  atomic_fallback.cpp  fast_mutex.cpp  shared_mutex.cpp
src/csv_reader/: CMakeLists.txt  csv_reader.cpp
src/datetime/: CMakeLists.txt  datetime.cpp
src/ddl/: CMakeLists.txt
src/ddl/codec/: bitserializer.cpp  codec.cpp  codec.headers  codec.sources  codec_elements.cpp  codec_elements.h  codec_factory.cpp  codec_index.cpp  codec_type_info.cpp  element_accessor.cpp  element_accessor.h  element_setter.h  named_codec_index.cpp  named_codec_index.h  static_codec.cpp  struct_layout.cpp  struct_layout.h
src/ddl/codec/legacy/: codec_access_legacy.h  codec_factory_legacy.cpp  codec_legacy.cpp  static_codec_legacy.cpp
src/ddl/datamodel/: datamodel.headers  datamodel.sources  datamodel_datadefinition.cpp  datamodel_header.cpp  datamodel_keyvalue.cpp  datamodel_streams.cpp  datamodel_types.cpp  datamodel_units.cpp  xml_datamodel.cpp
src/ddl/dd/: dd.cpp  dd.headers  dd.sources  dd_alignment_calculation.cpp  dd_alignment_calculation.h  dd_common_types.cpp  dd_error.cpp  dd_fromxmlelement.cpp  dd_fromxmlelement.h  dd_offset_calculation.cpp  dd_offset_calculation.h  dd_predefined_datatypes.cpp  dd_predefined_units.cpp  dd_struct_access.cpp  dd_typeinfomodel.cpp  dd_validationinfomodel.cpp  ddcompare.cpp  dddatatype.cpp  dddefault.cpp  ddelement.cpp  ddenum.cpp  ddfile.cpp  ddstring.cpp  ddstructure.cpp  ddunit.cpp
src/ddl/mapping/: mapping.headers  mapping.sources
src/ddl/mapping/configuration/: map_assignment.cpp  map_configuration.cpp  map_header.cpp  map_source.cpp  map_target.cpp  map_transformation.cpp  map_trigger.cpp
src/ddl/mapping/engine/: data_trigger.cpp  element.cpp  mapping_engine.cpp  periodic_trigger.cpp  signal_trigger.cpp  source.cpp  target.cpp  trigger.cpp
src/ddl/serialization/: serialization.cpp  serialization.headers  serialization.sources  serialization_legacy.cpp
src/ddl/utilities/: string_check.cpp  utilities.headers  utilities.sources
src/ddl_capi/: CMakeLists.txt  ddl_capi.c  ddl_capi.cpp
src/filesystem/: CMakeLists.txt  filesystem.cpp  path.cpp
src/logging/: CMakeLists.txt  log.cpp
src/memory/: CMakeLists.txt  memory.cpp  memorybuffer.cpp
src/pkg_rpc/: CMakeLists.txt  http_rpc_server.cpp  json_http_rpc.cpp  json_rpc.cpp  rpc_object_registry.cpp  threaded_http_server.cpp  url.cpp  url.h
src/pkg_rpc/stubgenerator/: CMakeLists.txt  commandline.cpp  commandline.h  parserhelper.cpp  parserhelper.h  stubgeneratorfactory.cpp
src/preprocessor/: CMakeLists.txt
src/process/: CMakeLists.txt  process.cpp  process_lin.cpp  process_win.cpp
src/regex/: CMakeLists.txt  regex.cpp  regularexpression.cpp
src/result/: CMakeLists.txt  empty_header.h.in  result_util.cpp
src/strings/: CMakeLists.txt  std_to_detail.h  strings.cpp  strings_convert.cpp  strings_default_conversion.cpp  strings_default_conversion.h  strings_format.cpp  strings_format_detail.h  strings_numeric_to_string.cpp  strings_numeric_traits.cpp  unicode.cpp
src/system/: CMakeLists.txt  address_info.cpp  system.cpp  timer.cpp  uuid.cpp
src/variant/: CMakeLists.txt  variant.cpp
src/xml/: CMakeLists.txt  dom.cpp
test/: CMakeLists.txt
test/function/: CMakeLists.txt
test/function/base/: CMakeLists.txt  delegate_test.cpp  errc_test.c  errc_test.cpp  errc_test.inc  maybe_unused_test.cpp  scopeguard_test.cpp  test_public_headers_are_self_contained.cmake
test/function/concurrency/: CMakeLists.txt  chrono_test.cpp  condvar_test.cpp  mutex_test.cpp  semaphore_test.cpp  thread_test.cpp
test/function/csv_reader/: CMakeLists.txt
test/function/csv_reader/files/: test.csv
test/function/csv_reader/src/: csv_reader_test.cpp
test/function/datetime/: CMakeLists.txt  datetime_test.cpp
test/function/ddl/: CMakeLists.txt
test/function/ddl/_common/: CMakeLists.txt  adtf_compat.h  test_measurement.h  test_oo_ddl.h
test/function/ddl_capi/: CMakeLists.txt  basic_test.cpp  corrupt.description  negative_test.cpp  test.description  test_fixture.h
test/function/ddl_capi/files/: corrupt.description  test.description
test/function/filesystem/: CMakeLists.txt  filesystem_test.cpp  path_test.cpp
test/function/logging/: CMakeLists.txt  logging_test.cpp
test/function/memory/: CMakeLists.txt  make_unique_test.cpp  memory_test.cpp  memorybuffer_test.cpp  shared_ptr_incomplete.cpp  shared_ptr_test.cpp  stack_ptr_test.cpp  unique_ptr_test.cpp
test/function/pkg_rpc/: CMakeLists.txt
test/function/pkg_rpc/files/: adtf_system_intf.h
test/function/pkg_rpc/src/: CMakeLists.txt  test.json  tester_jsonrpcstub.cpp  tester_pkg_rpc.cpp
test/function/preprocessor/: CMakeLists.txt  current_function_tests.cpp  deprecated_tests.cpp  dll_export_tests.cpp  dll_import_tests.cpp  to_string_tests.cpp
test/function/process/: CMakeLists.txt  process_env_test.cpp  process_execute_test.cpp
test/function/regex/: CMakeLists.txt  regex_test.cpp
test/function/result/: CMakeLists.txt
test/function/result/header_only/: CMakeLists.txt  ref_counted_object_test.cpp  result_type_compat_test.cpp  result_type_test.cpp
test/function/result/lib/: CMakeLists.txt  error_def_test.cpp  result_util_test.cpp
test/function/strings/: CMakeLists.txt  strings_convert_test.cpp  strings_format_test.cpp  strings_numeric_traits_test.cpp  strings_test.cpp  unicode_test.cpp
test/function/system/: CMakeLists.txt  address_info_test.cpp  system_test.cpp  test_shared_library.cpp  test_static_library.cpp  test_static_library.h  timer_test.cpp  uuid_test.cpp
test/function/variant/: CMakeLists.txt  variant_test.cpp
test/function/xml/: CMakeLists.txt
test/private/: CMakeLists.txt
test/private/install_complete/: reference.yaml
test/sca/: CMakeLists.txt
test/sca/self_contained_header/: CMakeLists.txt
(+356 files in other folders)
